- New endpoint to open a asset to status "fundraising" (state 4)
